--- a/turno/src/main/resources/application.properties
+++ b/turno/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-spring.application.name=turno
+server.port=8083
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=banquito_ventanillas
+
+spring.cloud.compatibility-verifier.enabled=false
+
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=always
+
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Configuración de Jackson para fechas
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=America/Guayaquil
