--- a/transaccion/src/main/resources/application.properties
+++ b/transaccion/src/main/resources/application.properties
@@ -15,3 +15,6 @@ springdoc.swagger-ui.path=/swagger-ui.html
 # Configuración de Jackson para fechas
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=America/Guayaquil
+
+# URL del microservicio de turnos para validaciones
+turno.service.url=http://localhost:8083
