--- a/transaccion/src/main/resources/application.properties
+++ b/transaccion/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8084
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=banquito_ventanillas
+spring.data.mongodb.host=${SPRING_DATA_MONGODB_HOST:localhost}
+spring.data.mongodb.port=${SPRING_DATA_MONGODB_PORT:27017}
+spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE:banquito_ventanillas}
 
 spring.cloud.compatibility-verifier.enabled=false
 
@@ -17,4 +17,4 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=America/Guayaquil
 
 # URL del microservicio de turnos para validaciones
-turno.service.url=http://localhost:8083
+turno.service.url=${TURNO_SERVICE_URL:http://localhost:8083}
