--- a/turno/src/main/resources/application.properties
+++ b/turno/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8083
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=banquito_ventanillas
+spring.data.mongodb.host=${SPRING_DATA_MONGODB_HOST:localhost}
+spring.data.mongodb.port=${SPRING_DATA_MONGODB_PORT:27017}
+spring.data.mongodb.database=${SPRING_DATA_MONGODB_DATABASE:banquito_ventanillas}
 
 spring.cloud.compatibility-verifier.enabled=false
 
